--- a/AventuraSalvaje/WebContent/WEB-INF/web.xml
+++ b/AventuraSalvaje/WebContent/WEB-INF/web.xml
@@ -9,6 +9,10 @@
 		<servlet-name>zkLoader</servlet-name>
 		<description>The ZK loader for ZUML pages</description>
 		<servlet-class>org.zkoss.zk.ui.http.DHtmlLayoutServlet</servlet-class>
+		<init-param>
+			<param-name>update-uri</param-name>
+			<param-value>/zkau</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet>
@@ -29,12 +33,7 @@
 		<url-pattern>/zkau/*</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-		<welcome-file>index.zul</welcome-file>
+		<welcome-file>loggin/login.zul</welcome-file>
+
 	</welcome-file-list>
 </web-app>
